[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-hackathon"
version = "0.1.0"
description = "MCP Server for Hackathon Project"
authors = [{name = "Hackathon Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']